--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </main>
 
         <footer>
+            <button class="logout-btn" type="button" onclick="logout()">ログアウト</button>
             <small class="copyright">&copy; <span id="year"></span> レシピマネージャー</small>
-            <button type="button" onclick="logout()">ログアウト</button>
         </footer>
 
         <script src="js/index.js"></script>
