change button color

--- a/pages/login.html
+++ b/pages/login.html
@@ -29,7 +29,7 @@
                     パスワード
                     <input type="password" id="password" name="password" required>
                 </label>
-                <button class="btn" type="button" onclick="login()">ログイン</button>
+                <button class="login-btn" type="button" onclick="login()">ログイン</button>
                 <p>まだアカウントがない場合 <a href="signup.html">アカウントを作成</a></p>
             </form>
         </main>
