--- a/pages/signup.html
+++ b/pages/signup.html
@@ -33,7 +33,7 @@
                     確認用パスワード
                     <input type="password" id="confirmed-password" name="confirmed-password" required>
                 </label>
-                <button class="btn" type="button" onclick="signUp()">登録</button>
+                <button class="signup-btn" type="button" onclick="signUp()">登録</button>
                 <p>すでにアカウントがある場合 <a href="login.html">ログイン</a></p>
             </form>
         </main>
